Atualizações do aprendizado

--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/a-mandaflores/docker-aula.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/a-mandaflores/docker-aula/issues"
+  },
+  "homepage": "https://github.com/a-mandaflores/docker-aula#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0"
   }
 }
